fix: tighten approved snapshot gates